fixed layout issue fixed wrong color for menu items in the header

--- a/IcyXmas/php-files/themes/IcyXmas/exitecms.css
+++ b/IcyXmas/php-files/themes/IcyXmas/exitecms.css
@@ -97,7 +97,7 @@ body					{ font-size:1em; font-family:Tahoma, Arial, Sans-Serif; background-imag
 .headermenu				{  }
 
 						/* header menu links */
-.headermenuitem			{  }
+.headermenuitem			{ color:#fff; }
 
 /* --- Panels ---------------------------------------------- */
 
